@@ -1,3 +1,8 @@
+2008-04-26  Per Bothner  <per@bothner.com>
+
+	* SortedNodes.java (find): Use unsigned shift to avoid
+	potential overflow error in binary search.
+
 2008-01-16  Per Bothner  <per@bothner.com>
 
 	* MakeUnescapedData (inline): Handle new argsInlined parameter.
